crates/eden-api-types/tests/snapshots/sessions/POST/request.snap
---
source: crates/eden-api-types/src/sessions/mod.rs
expression: body
input_file: crates/eden-api-types/tests/snapshots/sessions/POST
---
{
  "uuid": "00000000-0000-0000-0000-000000000000",
  "ip": "127.0.0.1",
  "edition": "java"
}
