crates/eden-api-types/tests/snapshots/sessions/POST/response-guest.snap
---
source: crates/eden-api-types/src/sessions/mod.rs
expression: body
input_file: crates/eden-api-types/tests/snapshots/sessions/POST
---
{
  "member": null,
  "perks": []
}
