crates/eden-api-types/tests/snapshots/sessions/POST/response-restricted.snap
---
source: crates/eden-api-types/src/sessions/mod.rs
expression: body
input_file: crates/eden-api-types/tests/snapshots/sessions/POST
---
{
  "member": {
    "id": "12345",
    "name": "steve",
    "status": {
      "type": "restricted",
      "reason": "griefing"
    },
    "last_login_at": "1972-02-23T07:06:07.000Z",
    "rank": "admin"
  },
  "perks": []
}
